# youtube-analyse

./: .gitignore  README.md
backend/: pyproject.toml
backend/creator_agent/: config.py  main.py  security.py  worker.py
backend/creator_agent/agent/: __init__.py  llm_report_analyzer.py  prompts.py  runtime.py  schemas.py  state.py  story_recap.py
backend/creator_agent/api/: __init__.py  routes.py
backend/creator_agent/collectors/: __init__.py  video_content.py  youtube_browser.py
backend/creator_agent/db/: __init__.py  models.py  repositories.py  session.py
backend/creator_agent/jobs/: __init__.py  pipeline.py  worker.py
backend/creator_agent/services/: __init__.py  analysis_audit_logger.py  analysis_service.py  cache_service.py  database_workspace_store.py  health_check_service.py  imitation_factory_service.py  monitor_service.py  redis_task_queue.py  sample_analysis_service.py  sample_library_service.py  script_studio_service.py  settings_service.py  story_workbench_service.py  style_service.py  task_service.py  transcript_store.py  translation_service.py  workspace_shapes.py  workspace_store.py
backend/creator_agent/tools/: __init__.py  comments.py  (+5 more)
backend/tests/: conftest.py  test_agent_runtime.py  test_api_routes.py  test_jobs.py  test_llm_report_analyzer.py  test_models.py  test_mysql_workspace_store.py  test_product_workflow.py  test_sample_analysis_service.py  test_script_studio.py  test_story_recap_analysis.py  test_style_service.py  test_tools.py  test_translation_service.py  test_video_content_collector.py  test_youtube_browser_collector.py
(+22 files in other folders)
