[project]
name = "youtube-creator-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.0,<2",
  "DrissionPage>=4.1.1,<5",
  "fastapi>=0.133.1,<1",
  "httpx>=0.28.1,<1",
  "pydantic>=2.13.0,<3",
  "pydantic-settings>=2.6.0,<3",
  "playwright>=1.49.0,<2",
  "pymysql>=1.1.1,<2",
  "redis>=5.2.0,<6",
  "rq>=2.0.0,<3",
  "sqlalchemy>=2.0.36,<3",
  "uvicorn[standard]>=0.41.0,<1",
  "yt-dlp>=2025.12.8,<2027",
  "youtube-transcript-api>=1.2.3,<2"
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.0,<10",
  "pytest-asyncio>=1.3.0,<2"
]
